--- a/index.html
+++ b/index.html
@@ -4,10 +4,110 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./index.css">
     <title>Static Layout</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <p>This is a test.</p>
+    <header>
+        <nav>
+            <div class="navigation_button">
+                <a href="https://www.google.com" target="_blank"><button class="navigation_login-button">Log In</button></a>
+            </div>
+        </nav>
+    </header>
+    <div class="page">
+            <div class="masthead_container gradient-skrim">
+                <div class="masthead_preheadline">
+                    <p>TRY UP TO ONE MONTH FREE</p>
+                </div>
+                <h1 class="masthead_headline">
+                    <img src="./assets/hulu_logo.png" alt="hulu logo">
+                </h1>
+                <div class="masthead_subheadline">
+                    <p>Watch thousands of TV shows and movies.</p>
+                </div>
+                <div class="masthead_secondary-message">
+                    <p>HBO Max™, SHOWTIME®, CINEMAX® and STARZ® available as add-ons.</p>
+                </div>
+                <div class="masthead_button">
+                    <a href="https://www.google.com" target="_blank"><button class="trial-button">START YOUR FREE TRIAL</button></a>
+                </div>
+                <div class="masthead_legal">
+                    <p>Free trial for new & eligible returning subscribers only.</p>
+                </div>
+            </div>
+            <div class="ribbon">
+                <div class="row">
+                    <div class="logos">
+                        <img src="./assets/ribbon-logos.png" alt="">
+                    </div>
+                    <div class="message">
+                        <div class="ribbon_preheader">BUNDLE WITH ANY HULU PLAN & SAVE</div>
+                        <div class="ribbon_details">Get Hulu, Disney+, and ESPN+.</div>
+                        <div class="ribbon_more"><a href="https://www.google.com" target="_blank">Details</a></div>
+                    </div>
+                    <div class="bundle-CTA">
+                        <a href="https://www.google.com" target="_blank"><button class="ribbon_cta-button" >GET BUNDLE</button></a>
+                        <div class="ribbon_legal"><a href="https://www.google.com" target="_blank">Terms apply</a></div>
+                    </div>
+                </div>
+            </div>
+        <section class="included-in-plan">
+            <div class="plan-container">
+                <div class="plan-header-content">
+                    <div class="plan-header-preheader">
+                        INCLUDED IN ALL PLANS
+                    </div>
+                    <div class="plan-header-main">
+                        All The TV You Love
+                    </div>
+                    <div class="plan-header-subheader">
+                        Stream full seasons of exclusive series, current-season episodes, hit movies, Hulu Originals, kids shows, and more.
+                    </div>
+                </div>
+                <div class="content-library-container">
+                    <div class="library-grid">
+                        <div class="library-item">
+                            <a href="https://www.google.com" target="_blank">
+                            <div class="library__item-gradient"></div></a>
+                            <img class="library__item-background" src="./assets/column-1-background.jpg" alt="">
+                            <div class="library_item-overlay">
+                                <div class="preheader">Past & Current Seasons</div>
+                                    <div class="header">TV Shows</div>
+                            </div>
+                        </div>
+                        <div class="library-item">
+                            <a href="https://www.google.com" target="_blank">
+                            <div class="library__item-gradient"></div></a>
+                            <img class="library__item-background" src="./assets/column-2-background.jpg" alt="">
+                            <div class="library_item-overlay">
+                                <div class="preheader">News & Classic</div>
+                                    <div class="header">Movies</div>
+                            </div>
+                        </div>
+                        <div class="library-item">
+                            <a href="https://www.google.com" target="_blank">
+                            <div class="library__item-gradient"></div></a>
+                            <img class="library__item-background" src="./assets/column-3-background.jpg" alt="">
+                            <div class="library_item-overlay">
+                                <div class="preheader">Groundbaking</div>
+                                    <div class="header">Hulu Originals</div>
+                            </div>
+                        </div>
+                        <div class="library-item">
+                            <a href="https://www.google.com" target="_blank">
+                            <div class="library__item-gradient"></div>
+                            <img class="library__item-background" src="./assets/column-4-background.jpg" alt=""></a>
+                            <div class="library_item-overlay">
+                                <div class="preheader">Add-on</div>
+                                    <div class="header">Premiums</div>
+                            </div>
+                            <div class="library__item-legal">Premium network add-ons available for an additional cost</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
